--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header class="header">
             <img class="logo" src="./assets/techno.svg" alt="Techno">
-            <div class="carrinho_menu"> {{ carrinhoTotal | numeroPreco }} | {{ carrinho.length }}</div>
+            <div class="carrinho_menu" @click="carrinhoAtivo = true"> {{ carrinhoTotal | numeroPreco }} | {{ carrinho.length }}</div>
         </header>
 
         <section class="modal" v-if="produto" @click="fecharModal">
@@ -50,6 +50,25 @@
                     <span class="produto_preco">{{ item.preco | numeroPreco }}</span>
                     <h1 class="produto_titulo">{{ item.nome }}</h1>
                 </div>
+            </div>
+        </section>
+
+        <section class="carrinho_modal" :class="{ativo: carrinhoAtivo}" @click="clickForaCarrinho">
+            <div class="carrinho_container">
+                <button class="carrinho_fechar" @click="carrinhoAtivo = false">X</button>
+                <h2 class="carrinho_titulo">Carrinho</h2>
+                <div v-if="carrinho.length">
+                    <ul class="carrinho_lista">
+                        <li v-for="(item, index) in carrinho" class="carrinho_item">
+                            <p>{{ item.nome }}</p>
+                            <p class="carrinho_preco">{{ item.preco | numeroPreco }}</p>
+                            <button class="carrinho_remover" @click="removerItem(index)">X</button>
+                        </li>
+                    </ul>
+                    <p class="carrinho_total">{{ carrinhoTotal|numeroPreco}}</p>
+                    <button class="carrinho_finlizar">Finalizar Compra</button>
+                </div>
+                <p v-else>O carrinho esstá vazio!</p>
             </div>
         </section>
 
